Fix alignment in header__logo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,10 @@ ul {
   align-items: center;
   justify-content: space-between;
 }
+.header__logo {
+  display: flex;
+  align-items: center;
+}
 .header__nav ul {
   display: flex;
   align-items: center;
